--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "wechat-bot",
   "version": "1.0.0",
   "description": "微信机器人",
-  "main": "src/main.ts",
+  "main": "index.js",
   "engines": {
     "node": "12"
   },
   "scripts": {
-    "start": "ts-node src/main.ts",
+    "dev": "ts-node src/main.ts",
+    "build": "tsc",
+    "start": "node dist/main.js",
     "test": "echo Hello WeChat Bot!"
   },
   "keywords": [
@@ -17,8 +19,19 @@
   "author": "fangmuke",
   "license": "MIT",
   "dependencies": {
-    "wechaty": "^0.47.24",
+    "@types/config": "^0.0.36",
+    "@types/lodash": "^4.14.165",
+    "config": "^3.3.2",
+    "lodash": "^4.17.20",
+    "wechaty": "^0.48.10",
     "wechaty-plugin-contrib": "^0.14.15",
-    "wechaty-puppet-padplus": "^0.7.40"
+    "wechaty-puppet": "^0.32.3",
+    "wechaty-puppet-padlocal": "^0.1.3"
+  },
+  "devDependencies": {
+    "@chatie/tsconfig": "^0.13.0",
+    "ts-loader": "^8.0.11",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   }
 }
